--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -10,6 +10,10 @@
   a {
     @apply text-blue-500 dark:text-blue-400;
   }
+  
+  filter {
+    @apply invert contrast-200;
+  }
 }
 
 @layer components {
